# TMC-API

./: CMakeLists.txt
tmc/ic/TMC2209/: TMC2209.h  TMC2209_Register.h
tmc/ic/TMC4210/: TMC4210.h
tmc/ic/TMC424/: TMC424.c  TMC424.h
tmc/ic/TMC457/: TMC457.h
tmc/ramp/: LinearRamp1.h  Ramp.h
